--- a/style.css
+++ b/style.css
@@ -36,3 +36,48 @@
     font-weight: 400;
     margin-top: 30px;
 }
+html {
+    font-size: 1rem;
+ }
+ h1 {
+   font-size: 1.2rem;
+ }
+ p {
+   font-size: 1.1rem;
+ }
+ 
+ @media (min-width: 768px) {
+   html {
+     font-size: 1.1rem;
+   }
+   h1 {
+       font-size: 1.3rem;
+   }
+   p {
+       font-size: 1.2rem;
+   }
+ }
+ 
+ @media (min-width: 991px) {
+     html {
+     font-size: 1.2rem;
+   }
+   h1 {
+       font-size: 1.5rem;
+   }
+   p {
+       font-size: 1.4rem;
+   }
+ }
+ 
+ @media (min-width: 1200px) {
+   html {
+     font-size: 1.2rem;
+   }
+   h1 {
+       font-size: 1.7rem;
+   }
+   p {
+       font-size: 1.6rem;
+   }
+ }
